--- a/test-output/index.html
+++ b/test-output/index.html
@@ -168,6 +168,9 @@
 &lt;?xml version=&quot;1.0&quot; encoding=&quot;UTF-8&quot;?&gt;
 &lt;!DOCTYPE suite SYSTEM &quot;http://testng.org/testng-1.0.dtd&quot;&gt;
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;paramsuite&quot;&gt;
+  &lt;listeners&gt;
+    &lt;listener class-name=&quot;com.seleniummavenproject.utilities.TestListener&quot;/&gt;
+  &lt;/listeners&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Verify Capgemini Text&quot;&gt;
     &lt;parameter name=&quot;searchCapgemini&quot; value=&quot;Capgemini&quot;/&gt;
     &lt;classes&gt;
@@ -242,22 +245,22 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(3);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'verifyNegativeString')
+data.setCell(0, 1, 'verifyCapgemini')
 data.setCell(0, 2, 'com.seleniummavenproject.test.BaseTest')
-data.setCell(0, 3, 5278);
+data.setCell(0, 3, 6163);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'verifyCapgemini')
+data.setCell(1, 1, 'verifyNegativeString')
 data.setCell(1, 2, 'com.seleniummavenproject.test.BaseTest')
-data.setCell(1, 3, 4956);
+data.setCell(1, 3, 5247);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'VerifyMainPageRendered')
 data.setCell(2, 2, 'com.seleniummavenproject.test.BaseTest')
-data.setCell(2, 3, 2660);
+data.setCell(2, 3, 3165);
 window.suiteTableData['paramsuite']= { tableData: data, tableDiv: 'times-div-paramsuite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 12 seconds</span>
+              <span class="suite-total-time">Total running time: 14 seconds</span>
               <div id="times-div-paramsuite">
               </div> <!-- times-div-paramsuite -->
             </div> <!-- times-div -->
@@ -307,35 +310,35 @@ return data;
               </div> <!-- configuration-test before -->
               <div class="test-method">
                 <span class="method-name">verifyCapgemini(Capgemini)</span>
-                <span class="method-start">6282 ms</span>
+                <span class="method-start">7506 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-test after">
                 <span class="method-name">closeBrowser</span>
-                <span class="method-start">11241 ms</span>
+                <span class="method-start">13674 ms</span>
               </div> <!-- configuration-test after -->
               <div class="configuration-test before">
                 <span class="method-name">lunchBrowserAndApplication</span>
-                <span class="method-start">13493 ms</span>
+                <span class="method-start">15900 ms</span>
               </div> <!-- configuration-test before -->
               <div class="test-method">
                 <span class="method-name">verifyNegativeString(see it comes back and search works)</span>
-                <span class="method-start">18900 ms</span>
+                <span class="method-start">21189 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-test after">
                 <span class="method-name">closeBrowser</span>
-                <span class="method-start">24179 ms</span>
+                <span class="method-start">26438 ms</span>
               </div> <!-- configuration-test after -->
               <div class="configuration-test before">
                 <span class="method-name">lunchBrowserAndApplication</span>
-                <span class="method-start">26361 ms</span>
+                <span class="method-start">28804 ms</span>
               </div> <!-- configuration-test before -->
               <div class="test-method">
                 <span class="method-name">VerifyMainPageRendered</span>
-                <span class="method-start">31393 ms</span>
+                <span class="method-start">34053 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-test after">
                 <span class="method-name">closeBrowser</span>
-                <span class="method-start">34054 ms</span>
+                <span class="method-start">37219 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
