--- a/test-output/old/paramsuite/methods-alphabetical.html
+++ b/test-output/old/paramsuite/methods-alphabetical.html
@@ -1,22 +1,22 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>paramsuite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a4fc66">  <td>18/05/11 00:02:46</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BaseTest.VerifyMainPageRendered()[pri:0, instance:com.seleniummavenproject.test.BaseTest@1ee9989]">VerifyMainPageRendered</td> 
-  <td>main@26817333</td>   <td></td> </tr>
-<tr bgcolor="a4fc66">  <td>18/05/11 00:02:26</td>   <td>-20152</td> <td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeBrowser()[pri:0, instance:com.seleniummavenproject.test.BaseTest@11161c7]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@26817333</td>   <td></td> </tr>
-<tr bgcolor="a4fc66">  <td>18/05/11 00:02:39</td>   <td>-7214</td> <td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeBrowser()[pri:0, instance:com.seleniummavenproject.test.BaseTest@9838eb]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@26817333</td>   <td></td> </tr>
-<tr bgcolor="a4fc66">  <td>18/05/11 00:02:49</td>   <td>2661</td> <td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeBrowser()[pri:0, instance:com.seleniummavenproject.test.BaseTest@1ee9989]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@26817333</td>   <td></td> </tr>
-<tr bgcolor="a4fc66">  <td>18/05/11 00:02:15</td>   <td>-31385</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.lunchBrowserAndApplication()[pri:0, instance:com.seleniummavenproject.test.BaseTest@11161c7]">&gt;&gt;lunchBrowserAndApplication</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@26817333</td>   <td></td> </tr>
-<tr bgcolor="a4fc66">  <td>18/05/11 00:02:28</td>   <td>-17900</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.lunchBrowserAndApplication()[pri:0, instance:com.seleniummavenproject.test.BaseTest@9838eb]">&gt;&gt;lunchBrowserAndApplication</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@26817333</td>   <td></td> </tr>
-<tr bgcolor="a4fc66">  <td>18/05/11 00:02:41</td>   <td>-5032</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.lunchBrowserAndApplication()[pri:0, instance:com.seleniummavenproject.test.BaseTest@1ee9989]">&gt;&gt;lunchBrowserAndApplication</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@26817333</td>   <td></td> </tr>
-<tr bgcolor="a4fc66">  <td>18/05/11 00:02:21</td>   <td>-25111</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BaseTest.verifyCapgemini(java.lang.String)[pri:0, instance:com.seleniummavenproject.test.BaseTest@11161c7]">verifyCapgemini</td> 
-  <td>main@26817333</td>   <td></td> </tr>
-<tr bgcolor="a4fc66">  <td>18/05/11 00:02:34</td>   <td>-12493</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BaseTest.verifyNegativeString(java.lang.String)[pri:0, instance:com.seleniummavenproject.test.BaseTest@9838eb]">verifyNegativeString</td> 
-  <td>main@26817333</td>   <td></td> </tr>
+<tr bgcolor="8ad7a2">  <td>18/05/14 11:14:18</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BaseTest.VerifyMainPageRendered()[pri:0, instance:com.seleniummavenproject.test.BaseTest@13ad2d6]">VerifyMainPageRendered</td> 
+  <td>main@3288358</td>   <td></td> </tr>
+<tr bgcolor="8ad7a2">  <td>18/05/14 11:13:58</td>   <td>-20379</td> <td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeBrowser()[pri:0, instance:com.seleniummavenproject.test.BaseTest@4ed9f0]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@3288358</td>   <td></td> </tr>
+<tr bgcolor="8ad7a2">  <td>18/05/14 11:14:10</td>   <td>-7615</td> <td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeBrowser()[pri:0, instance:com.seleniummavenproject.test.BaseTest@dafa95]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@3288358</td>   <td></td> </tr>
+<tr bgcolor="8ad7a2">  <td>18/05/14 11:14:21</td>   <td>3166</td> <td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeBrowser()[pri:0, instance:com.seleniummavenproject.test.BaseTest@13ad2d6]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@3288358</td>   <td></td> </tr>
+<tr bgcolor="8ad7a2">  <td>18/05/14 11:13:44</td>   <td>-34044</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.lunchBrowserAndApplication()[pri:0, instance:com.seleniummavenproject.test.BaseTest@4ed9f0]">&gt;&gt;lunchBrowserAndApplication</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@3288358</td>   <td></td> </tr>
+<tr bgcolor="8ad7a2">  <td>18/05/14 11:14:00</td>   <td>-18153</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.lunchBrowserAndApplication()[pri:0, instance:com.seleniummavenproject.test.BaseTest@dafa95]">&gt;&gt;lunchBrowserAndApplication</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@3288358</td>   <td></td> </tr>
+<tr bgcolor="8ad7a2">  <td>18/05/14 11:14:13</td>   <td>-5248</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.lunchBrowserAndApplication()[pri:0, instance:com.seleniummavenproject.test.BaseTest@13ad2d6]">&gt;&gt;lunchBrowserAndApplication</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@3288358</td>   <td></td> </tr>
+<tr bgcolor="8ad7a2">  <td>18/05/14 11:13:51</td>   <td>-26547</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BaseTest.verifyCapgemini(java.lang.String)[pri:0, instance:com.seleniummavenproject.test.BaseTest@4ed9f0]">verifyCapgemini</td> 
+  <td>main@3288358</td>   <td></td> </tr>
+<tr bgcolor="8ad7a2">  <td>18/05/14 11:14:05</td>   <td>-12864</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BaseTest.verifyNegativeString(java.lang.String)[pri:0, instance:com.seleniummavenproject.test.BaseTest@dafa95]">verifyNegativeString</td> 
+  <td>main@3288358</td>   <td></td> </tr>
 </table>
